--- a/front/js/css/main.css
+++ b/front/js/css/main.css
@@ -38,3 +38,11 @@ h1 {
 .container p {
   text-align: center;
 }
+
+.container2 {
+  text-align: center;
+}
+
+.container3 {
+  text-align: center;
+}
